# -OpenCV-

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  智能工作台.files
.github/workflows/: ci.yml
docs/: RELEASE_v1.0.0.md  release-body-v1.0.0.md
docs/screenshots/: README.md
plugins/color_conversion/: CMakeLists.txt  ColorConversionPlugin.cpp  GrayscaleProcessor.cpp  GrayscaleProcessor.h  HsvConvertProcessor.cpp  HsvConvertProcessor.h  color_conversion.json
plugins/edge_detection/: CMakeLists.txt  CannyProcessor.cpp  CannyProcessor.h  EdgeDetectionPlugin.cpp  LaplacianProcessor.cpp  LaplacianProcessor.h  SobelProcessor.cpp  SobelProcessor.h  edge_detection.json
plugins/face_detection/: CMakeLists.txt  DnnDetectorProcessor.cpp  DnnDetectorProcessor.h  FaceDetectionPlugin.cpp  FaceDetectionUtils.cpp  FaceDetectionUtils.h  HaarDetectorProcessor.cpp  HaarDetectorProcessor.h  face_detection.json  resources.qrc
plugins/feature_matching/: CMakeLists.txt  FeatureMatchingPlugin.cpp  OrbMatcherProcessor.cpp  OrbMatcherProcessor.h  SiftMatcherProcessor.cpp  SiftMatcherProcessor.h  feature_matching.json
plugins/filtering/: BilateralFilterProcessor.cpp  BilateralFilterProcessor.h  CMakeLists.txt  FilteringPlugin.cpp  GaussianBlurProcessor.cpp  GaussianBlurProcessor.h  MedianBlurProcessor.cpp  MedianBlurProcessor.h  filtering.json
plugins/morphology/: CMakeLists.txt  DilateProcessor.cpp  DilateProcessor.h  ErodeProcessor.cpp  ErodeProcessor.h  GradientProcessor.cpp  GradientProcessor.h  MorphologyPlugin.cpp  OpenCloseProcessor.cpp  OpenCloseProcessor.h  morphology.json
plugins/qr_detection/: CMakeLists.txt  QrCodeProcessor.cpp  QrCodeProcessor.h  QrDetectionPlugin.cpp  qr_detection.json
plugins/threshold/: AdaptiveThresholdProcessor.cpp  AdaptiveThresholdProcessor.h  BinaryThresholdProcessor.cpp  BinaryThresholdProcessor.h  CMakeLists.txt  OtsuThresholdProcessor.cpp  OtsuThresholdProcessor.h  ThresholdPlugin.cpp  threshold.json
resources/: resources.qrc
resources/models/: deploy.prototxt
scripts/: download_dnn_models.bat  download_wechat_qr_models.bat
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h
src/capture/: CameraDevice.cpp  CameraDevice.h  FrameGrabber.cpp  FrameGrabber.h  ImageFileSource.cpp  ImageFileSource.h
src/core/: IImageProcessor.h  IPluginFactory.h  ImageData.cpp  ImageData.h  PipelineNode.h  PluginManager.cpp  PluginManager.h  ProcessingPipeline.cpp  ProcessingPipeline.h  ProjectModel.cpp  ProjectModel.h
src/ui/: ComparisonView.cpp  ComparisonView.h  HistoryPanel.cpp  HistoryPanel.h  ImageCanvas.cpp  ImageCanvas.h  ParameterPanel.cpp  ParameterPanel.h  PipelinePanel.cpp  PipelinePanel.h  PreferencesDialog.cpp  PreferencesDialog.h  SourcePanel.cpp  SourcePanel.h
src/utils/: AppPaths.cpp  AppPaths.h  AppSettings.cpp  AppSettings.h  CvMatToQImage.cpp  CvMatToQImage.h  JsonHelper.cpp  JsonHelper.h  LanguageManager.cpp  LanguageManager.h  ModelPaths.cpp  ModelPaths.h  ProcessorLocalization.cpp  ProcessorLocalization.h  ScopedCvTimer.h
translations/: svw_zh_CN.ts
